--- a/style.css
+++ b/style.css
@@ -9,12 +9,12 @@ body {
     align-items: flex-start;
     /* background-color: gold; */
     /* background-color: #093145; */
-    height: 55em;
+    height: 60em;
 
 }
 
     .link-container {
-        margin: 5em 0 0;
+        margin: 5em 0;
         /* border: 2px solid salmon; */
         border-radius: 3em;
         /* padding: 0 5em; */
@@ -23,7 +23,7 @@ body {
         align-items: center;
         justify-content: center;
         gap: 2em;
-        min-height: 45em;
+        min-height: 50em;
         /* width: 50em; */
         min-width: 42em;
         /* background-color: rgb(168, 161, 161); */
