--- a/Itinerary Generator/style.css
+++ b/Itinerary Generator/style.css
@@ -8,6 +8,7 @@
     #map {
         margin: 1em;
         border: 2px solid gold;
+        /* border-radius: 3em; */
         width: 100em;
         height: 50em;
     }
@@ -33,4 +34,32 @@
             background-color: salmon;
             color: white;
         }
+
+.search-container {
+    border: 2px solid salmon;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 1.5em;
+    height: 5em;
+}
+
+    #search-text {
+        border: 2px solid gold;
+        padding: 0.5em;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 15em;
+    }
+
+    #search-button {
+        /* border: 2px solid gold; */
+        border: none;
+        border-radius: 0.5em;
+        padding: 0.8em 1.3em;
+        background-color: salmon;
+        color: white;
+        font-weight: bold;
+    }
   
