--- a/Itinerary Generator/style.css
+++ b/Itinerary Generator/style.css
@@ -1,5 +1,5 @@
 .map-container {
-    border: 2px solid salmon;
+    /* border: 2px solid salmon; */
     display: flex;
     justify-content: center;
     /* gap: 1em; */
@@ -7,7 +7,7 @@
 
     #map {
         margin: 1em;
-        border: 2px solid gold;
+        /* border: 2px solid gold; */
         /* border-radius: 3em; */
         width: 100em;
         height: 50em;
@@ -15,7 +15,7 @@
 
     .cities-container {
         margin: 1em;
-        border: 2px solid gold;
+        /* border: 2px solid gold; */
         display: flex;
         flex-direction: column;
     }
@@ -36,7 +36,7 @@
         }
 
 .search-container {
-    border: 2px solid salmon;
+    /* border: 2px solid salmon; */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -56,10 +56,11 @@
     #search-button {
         /* border: 2px solid gold; */
         border: none;
-        border-radius: 0.5em;
-        padding: 0.8em 1.3em;
+        border-radius: 0.8em;
+        padding: 0.7em 1.3em;
         background-color: salmon;
         color: white;
         font-weight: bold;
+        font-size: 1rem;
     }
   
