--- a/JS Image Uploader/style.css
+++ b/JS Image Uploader/style.css
@@ -1,3 +1,7 @@
+body {
+    font-family: 'Lato', sans-serif;
+}
+
 .parent-container {
     /* border: 2px solid salmon; */
     display: flex;
@@ -48,7 +52,8 @@
             display: flex;
             flex-direction: column;
             position: relative;
-            /* align-items: flex-end; */
+            align-items: center;
+            /* font-weight: bold; */
         }
 
         .image-download-container:hover .downloadImage {
@@ -71,7 +76,7 @@
                 position: absolute;
                 visibility: hidden;
                 /* opacity: 0; */
-                bottom: 1.5rem;
+                bottom: 4.5rem;
                 right: 2rem;
                 /* text-decoration: none; */
                 font-size: 2rem;
@@ -96,3 +101,4 @@
             
             /* downloadLink.style.color='black' */
             /* downloadLink.style.textDecoration='none' */
+            
