--- a/Itinerary Generator/style.css
+++ b/Itinerary Generator/style.css
@@ -1,5 +1,8 @@
 body {
     font-family: 'Roboto', sans-serif;
+    background: url(pexels-antonio-quagliata-227433\ \(2\).jpg);
+    /* backdrop-filter: blur(5px); */
+    background-size: cover;
 }
 
 .map-container {
@@ -13,7 +16,7 @@ body {
 
     #map {
         /* border: 2px solid gold; */
-        /* border-radius: 3em; */
+        border-radius: 0.5em;
         width: 100em;
         height: 50em;
     }
