--- a/Itinerary Generator/style.css
+++ b/Itinerary Generator/style.css
@@ -95,6 +95,7 @@ body {
         justify-content: center;
         align-items: center;
         width: 15em;
+        color: white;
     }
 
     #search-button {
