--- a/YouTube Clone/style.css
+++ b/YouTube Clone/style.css
@@ -7,6 +7,7 @@ body {
         border: 2px solid greenyellow;
         display: flex;
         justify-content: space-between;
+        align-items: center;
     }
 
         .search-container {
@@ -16,8 +17,13 @@ body {
 
             #search-box {
                 border: 2px solid salmon;
+                min-width: 20em;
             }
 
-            #search-button {
+            .search-button-container {
                 border: 2px solid salmon;
+                min-width: 5em;
             }
+
+                #search-button {
+                }
