--- a/YouTube Clone/style.css
+++ b/YouTube Clone/style.css
@@ -11,7 +11,7 @@ body {
     }
 
         .search-container {
-            /* border: 2px solid gray; */
+            border: 2px solid salmon;
             display: flex;
             /* opacity: 8%; */
         }
@@ -35,7 +35,7 @@ body {
                 /* border: 2px solid salmon; */
                 border-radius: 0 4em 4em 0;
                 padding: 0.5em 1em;
-                min-width: 3.5em;
+                min-width: 2.5em;
                 display: flex;
                 justify-content: center;
                 background-color: rgba(128, 128, 128, 0.336);
