--- a/YouTube Clone/style.css
+++ b/YouTube Clone/style.css
@@ -11,36 +11,36 @@ body {
     }
 
         .search-container {
-            border: 2px solid salmon;
+            /* border: 2px solid salmon; */
             display: flex;
             /* opacity: 8%; */
         }
 
             #search-box {
-                border: 1px solid gray;
+                border: 1px solid rgba(128, 128, 128, 0.336);
                 /* border: 2px solid salmon; */
                 border-radius: 4em 0 0 4em;
-                padding: 0.5em 1em;
+                padding: 0.5em 1.2em;
                 min-width: 30em;
                 display: flex;
                 /* text-align: start; */
                 align-items: center;
                 font-family: 'Roboto', sans-serif;
-                color: #ffffff;
+                color: gray;
                 background-color: #121212;
             }
 
             .search-button-container {
-                border: 1px solid gray;
+                /* border: 1px solid rgba(128, 128, 128, 0.336); */
                 /* border: 2px solid salmon; */
                 border-radius: 0 4em 4em 0;
                 padding: 0.5em 1em;
-                min-width: 2.5em;
+                min-width: 2em;
                 display: flex;
                 justify-content: center;
                 background-color: rgba(128, 128, 128, 0.336);
                 /* opacity: 80%; */
             }
 
-                #search-button {
+                #search-button-image {
                 }
