--- a/YouTube Clone/style.css
+++ b/YouTube Clone/style.css
@@ -13,6 +13,7 @@ body {
         .search-container {
             /* border: 2px solid salmon; */
             display: flex;
+            /* gap: 1em; */
             /* opacity: 8%; */
         }
 
@@ -20,7 +21,7 @@ body {
                 border: 1px solid rgba(128, 128, 128, 0.336);
                 /* border: 2px solid salmon; */
                 border-radius: 4em 0 0 4em;
-                padding: 0.5em 1.2em;
+                padding: 0.59em 1.2em;
                 min-width: 30em;
                 display: flex;
                 /* text-align: start; */
@@ -35,12 +36,17 @@ body {
                 /* border: 2px solid salmon; */
                 border-radius: 0 4em 4em 0;
                 padding: 0.5em 1em;
-                min-width: 2em;
+                width: 2em;
                 display: flex;
                 justify-content: center;
                 background-color: rgba(128, 128, 128, 0.336);
                 /* opacity: 80%; */
             }
 
-                #search-button-image {
-                }
+                /* #search-button-image { */
+                /* } */
+
+    .videos-container {
+        border: 2px solid salmon;
+    }
+    
