Revamped the search bar's visual appeal and structure to provide a more polished user experience. This update includes integrating the 'Roboto' sans-serif font for consistent typography, introducing the #results-count element to display search result numbers, refining border and background color properties for #search-box and #results-count, and optimizing vertical alignment within #search-box. These adjustments collectively contribute to a refined search bar presentation while maintaining the existing styling for other page sections.

--- a/YouTube Clone/style.css
+++ b/YouTube Clone/style.css
@@ -13,22 +13,29 @@ body {
         .search-container {
             /* border: 2px solid salmon; */
             display: flex;
+            font-family: 'Roboto', sans-serif;
             /* gap: 1em; */
             /* opacity: 8%; */
         }
 
-            #search-box {
+            #search-box, #results-count {
                 border: 1px solid rgba(128, 128, 128, 0.336);
+                background-color: #121212;
+                display: flex;
+                color: gray;
+            }
+        
+            #search-box {
                 /* border: 2px solid salmon; */
                 border-radius: 4em 0 0 4em;
                 padding: 0.59em 1.2em;
                 min-width: 30em;
-                display: flex;
                 /* text-align: start; */
                 align-items: center;
-                font-family: 'Roboto', sans-serif;
-                color: gray;
-                background-color: #121212;
+            }
+
+            #results-count {
+                padding: 0.59em 1em;
             }
 
             .search-button-container {
@@ -49,4 +56,3 @@ body {
     .videos-container {
         border: 2px solid salmon;
     }
-    
