--- a/YouTube Clone/style.css
+++ b/YouTube Clone/style.css
@@ -11,7 +11,7 @@ body {
     }
 
         .search-container {
-            /* border: 2px solid salmon; */
+            border: 2px solid salmon;
             display: flex;
             font-family: 'Roboto', sans-serif;
             /* gap: 1em; */
@@ -29,7 +29,7 @@ body {
                 /* border: 2px solid salmon; */
                 border-radius: 4em 0 0 4em;
                 padding: 0.59em 1.2em;
-                min-width: 30em;
+                min-width: 25em;
                 /* text-align: start; */
                 align-items: center;
             }
@@ -43,7 +43,7 @@ body {
                 /* border: 2px solid salmon; */
                 border-radius: 0 4em 4em 0;
                 padding: 0.5em 1em;
-                width: 2em;
+                width: 1.7em;
                 display: flex;
                 justify-content: center;
                 background-color: rgba(128, 128, 128, 0.336);
