--- a/YouTube Clone/style.css
+++ b/YouTube Clone/style.css
@@ -70,4 +70,5 @@ body {
         /* border: 2px solid salmon; */
         display: flex;
         flex-wrap: wrap;
+        justify-content: center;
     }
