Introduced a gap of 2em between videos in the videos-container, and also added padding for the container.

--- a/YouTube Clone/style.css
+++ b/YouTube Clone/style.css
@@ -62,13 +62,11 @@ body {
                 transition: 0.3s;
             }
 
-
-                /* #search-button-image { */
-                /* } */
-
     .videos-container {
-        /* border: 2px solid salmon; */
+        border: 2px solid salmon;
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
+        padding: 2em;
+        gap: 2em;
     }
