--- a/YouTube Clone/style.css
+++ b/YouTube Clone/style.css
@@ -82,6 +82,12 @@ body {
                 padding: 0.5em;
             }
 
+            tbody {
+                display: flex;
+                flex-direction: column;
+                gap: 1em;
+            }
+
             .table-row {
                 border: 2px solid salmon;
                 min-width: 17em;
