--- a/Movie Search Page/style.css
+++ b/Movie Search Page/style.css
@@ -107,7 +107,7 @@ body {
                 /* border: 2px solid greenyellow; */
                 display: flex;
                 /* flex-wrap: wrap; */
-                /* gap: 1em; */
+                gap: 2em;
                 /* flex-direction: column; */
                 /* justify-content: center; */
                 /* align-items: flex-start; */
@@ -128,6 +128,7 @@ body {
 
                 .detail-area {
                     /* margin: 2em 0 0 2em; */
+                    flex-wrap: wrap;
                     color: #5799ef;
                     width: 20em;
                 }
