--- a/ACI/style.css
+++ b/ACI/style.css
@@ -7,12 +7,6 @@
     align-items: center;
 }
 
-    #main-header {
-        border: 2px solid salmon;
-        font-size: 35px;
-        font-weight: 900;
-        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    }
 
     .contact-container {
         display: flex;
@@ -23,4 +17,7 @@
     }
 
 
+    li {
+        list-style-type: none;
+    }
     
