--- a/ACI/style.css
+++ b/ACI/style.css
@@ -1,23 +1,40 @@
-.header-container {
-    margin: 2em 0 0;
-    border: 2px solid greenyellow;
-    /* padding: 10em 2em 0 6em; */
-    display: flex;
-    justify-content: center;
-    align-items: center;
+body {
+    margin: 0;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-
-    .contact-container {
+    #navbar {
+        margin: 2em 0 0;
+        border: 1px solid #567daa;
+        /* border: 2px solid greenyellow; */
+        /* padding: 10em 2em 0 6em; */
+        background-color: rgb(0, 62, 120, 80%);
         display: flex;
+        /* gap: 2em; */
+        justify-content: center;
+        align-items: center;
     }
 
-    .contact-container > * {
-        border: 2px black;
-    }
+        .navbar-item:hover {
+            background-color: #003e78;
+            color: #ffcb0b;
+            cursor: pointer;
+            transition: 0.8s ease-in-out;
+        }
+
+        .navbar-item {
+            border-left: 1.5px solid #567daa;
+            padding: 0.5em 1em;
+            color: white;
+            max-width: 8em;
+        }
 
 
-    li {
-        list-style-type: none;
+    a:link, a:visited {
+        /* color: black; */
+        text-decoration: none;
     }
     
+
+
+    /* all 0.2s ease-in-out */
