--- a/ACI/style.css
+++ b/ACI/style.css
@@ -1,6 +1,9 @@
 body {
     margin: 0;
+    /* width: 99vw; */
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    background-image: url(pexels-einfoto-2305098.jpg);
+
 }
 
     #navbar {
@@ -12,21 +15,35 @@ body {
         display: flex;
         /* gap: 2em; */
         justify-content: center;
-        align-items: center;
+        /* align-items: center; */
     }
 
         .navbar-item:hover {
             background-color: #003e78;
             color: #ffcb0b;
             cursor: pointer;
-            transition: 0.8s ease-in-out;
+            transition: 0.4s ease-in-out;
         }
 
         .navbar-item {
             border-left: 1.5px solid #567daa;
             padding: 0.5em 1em;
             color: white;
-            max-width: 8em;
+            font-size: 1rem;
+            /* max-width: 8em; */
+        }
+
+    #text-container {
+        border: 2px solid greenyellow;
+        display: flex;
+        justify-content: center;
+    }
+
+        #text-body {
+            /* margin: 0; */
+            border: 2px solid salmon;
+            text-align: center;
+            font-size: 1.5rem;
         }
 
 
