--- a/ACI/style.css
+++ b/ACI/style.css
@@ -1,9 +1,14 @@
 body {
     margin: 0;
     /* width: 99vw; */
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    background-image: url(pexels-einfoto-2305098.jpg);
-
+    /* font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; */
+    font-family: "Roboto";
+    background-image: url(ai-generated-8578282_1280.jpg);
+    /* background: linear-gradient(rgba(255,255,255,.5), rgba(255,255,255,0.5)), url("pexels-tranmautritam-326503.jpg"); */
+    /* background-image: linear-gradient(to bottom right, #003e78, #dddd4b); */
+    background-size: cover;
+    /* backdrop-filter: blur(5px); */
+    /* opacity: 0.3; */
 }
 
     #navbar {
@@ -13,7 +18,7 @@ body {
         /* padding: 10em 2em 0 6em; */
         background-color: rgb(0, 62, 120, 80%);
         display: flex;
-        /* gap: 2em; */
+        /* gap: 0.1em; */
         justify-content: center;
         /* align-items: center; */
     }
@@ -26,24 +31,31 @@ body {
         }
 
         .navbar-item {
-            border-left: 1.5px solid #567daa;
-            padding: 0.5em 1em;
+            /* border-left: 1.5px solid #567daa; */
+            border-radius: 0.3em;
+            padding: 0.5em 1.3em;
             color: white;
             font-size: 1rem;
             /* max-width: 8em; */
         }
 
     #text-container {
-        border: 2px solid greenyellow;
+        /* border: 2px solid greenyellow; */
         display: flex;
         justify-content: center;
     }
 
         #text-body {
-            /* margin: 0; */
-            border: 2px solid salmon;
+            margin: 3em;
+            /* border: 2px solid salmon; */
+            border-radius: 0.4em;
+            padding: 1.2em 2em;
+            max-width: 30vw;
             text-align: center;
             font-size: 1.5rem;
+            background-color: rgba(51, 51, 51, 0.75);
+            /* color: rgb(54, 43, 43); */
+            color: white;
         }
 
 
