--- a/ACI/style.css
+++ b/ACI/style.css
@@ -3,7 +3,7 @@ body {
     /* width: 99vw; */
     /* font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; */
     font-family: "Roboto";
-    background-image: url(ai-generated-8578282_1280.jpg);
+    background-image: url(pexels-pixabay-531844.jpg);
     /* background: linear-gradient(rgba(255,255,255,.5), rgba(255,255,255,0.5)), url("pexels-tranmautritam-326503.jpg"); */
     /* background-image: linear-gradient(to bottom right, #003e78, #dddd4b); */
     background-size: cover;
@@ -42,10 +42,11 @@ body {
     #text-container {
         /* border: 2px solid greenyellow; */
         display: flex;
+        flex-direction: column;
         justify-content: center;
     }
 
-        #text-body {
+        .text-body {
             margin: 3em;
             /* border: 2px solid salmon; */
             border-radius: 0.4em;
