--- a/ACI/style.css
+++ b/ACI/style.css
@@ -59,6 +59,13 @@ body {
             color: white;
         }
 
+        .text-header {
+            /* margin: 2em 0; */
+            border: 2px solid greenyellow;
+            /* padding: 2em; */
+            font-size: 2.5rem;
+        }
+
 
     a:link, a:visited {
         /* color: black; */
