--- a/ACI/style.css
+++ b/ACI/style.css
@@ -1,19 +1,17 @@
 body {
     margin: 0;
-    /* width: 99vw; */
-    /* font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; */
-    font-family: "Roboto";
-    background-image: url(pexels-pixabay-531844.jpg);
-    /* background: linear-gradient(rgba(255,255,255,.5), rgba(255,255,255,0.5)), url("pexels-tranmautritam-326503.jpg"); */
+    font-family: "Lato", sans-serif;
+    /* background-image: url(pexels-pixabay-531844.jpg); */
     /* background-image: linear-gradient(to bottom right, #003e78, #dddd4b); */
     background-size: cover;
+    background-color: black;
     /* backdrop-filter: blur(5px); */
     /* opacity: 0.3; */
 }
 
     #navbar {
         margin: 2em 0 0;
-        border: 1px solid #567daa;
+        /* border: 1px solid #567daa; */
         /* border: 2px solid greenyellow; */
         /* padding: 10em 2em 0 6em; */
         background-color: rgb(0, 62, 120, 80%);
@@ -24,6 +22,7 @@ body {
     }
 
         .navbar-item:hover {
+            border-top: 2px solid #ffcb0b;
             background-color: #003e78;
             color: #ffcb0b;
             cursor: pointer;
@@ -33,7 +32,7 @@ body {
         .navbar-item {
             /* border-left: 1.5px solid #567daa; */
             border-radius: 0.3em;
-            padding: 0.5em 1.3em;
+            padding: 0.8em 1.3em;
             color: white;
             font-size: 1rem;
             /* max-width: 8em; */
@@ -50,8 +49,8 @@ body {
             margin: 3em;
             border: 2px solid salmon;
             border-radius: 0.4em;
-            padding: 1.2em 2em;
-            max-width: 30vw;
+            padding: 4em 8em;
+            max-width: 33vw;
             text-align: center;
             font-size: 1.5rem;
             background-color: rgba(51, 51, 51, 0.75);
@@ -63,7 +62,11 @@ body {
             /* margin: 2em 0; */
             border: 2px solid greenyellow;
             /* padding: 2em; */
-            font-size: 2.5rem;
+            font-size: 2rem;
+        }
+
+        .list-point-parent {
+            font-size: 2rem;
         }
 
 
