--- a/ACI/style.css
+++ b/ACI/style.css
@@ -4,7 +4,11 @@ body {
     /* background-image: url(pexels-pixabay-531844.jpg); */
     /* background-image: linear-gradient(to bottom right, #003e78, #dddd4b); */
     background-size: cover;
-    background-color: black;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 3em;
+    /* background-color: black; */
     /* backdrop-filter: blur(5px); */
     /* opacity: 0.3; */
 }
@@ -38,31 +42,49 @@ body {
             /* max-width: 8em; */
         }
 
-    #content-container {
+    .content-container {
         border: 2px solid greenyellow;
         display: flex;
-        flex-direction: column;
+        /* flex-direction: column; */
         align-items: center;
+        justify-content: center;
+        gap: 2em;
+        width: 50vw;
     }
 
-        .text-body {
-            margin: 3em;
-            border: 2px solid salmon;
-            border-radius: 0.4em;
-            padding: 4em 8em;
-            max-width: 33vw;
-            text-align: center;
-            font-size: 1.5rem;
-            background-color: rgba(51, 51, 51, 0.75);
-            /* color: rgb(54, 43, 43); */
-            color: white;
+        .text-container {
+            border: 2px solid red;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
         }
 
-        .text-header {
-            /* margin: 2em 0; */
-            border: 2px solid greenyellow;
-            /* padding: 2em; */
-            font-size: 2rem;
+            .text-header {
+                margin: 0;
+                border: 2px solid yellow;
+                /* padding: 2em; */
+                font-size: 2rem;
+            }
+
+            .text-body {
+                /* margin: 3em; */
+                border: 2px solid salmon;
+                border-radius: 0.4em;
+                padding: 1em 2em;
+                /* max-width: 33vw; */
+                text-align: center;
+                font-size: 1rem;
+                /* background-color: rgba(51, 51, 51, 0.75); */
+                /* color: rgb(54, 43, 43); */
+                /* color: white; */
+            }
+
+        .image-container {
+            border: 2px solid red;
+        }
+
+        img {
+            height: 50vh;
         }
 
         .list-point-parent {
