--- a/ACI/style.css
+++ b/ACI/style.css
@@ -57,6 +57,7 @@ body {
             display: flex;
             flex-direction: column;
             align-items: center;
+            max-width: 23vw;
         }
 
             .text-header {
@@ -81,6 +82,7 @@ body {
 
         .image-container {
             border: 2px solid red;
+            max-width: 23vw;
         }
 
         img {
