--- a/ACI/style.css
+++ b/ACI/style.css
@@ -14,7 +14,7 @@ body {
     #navbar {
         margin: 2em 0 0;
         /* border: 1px solid #567daa; */
-        /* border: 2px solid greenyellow; */
+        border: 2px solid greenyellow;
         /* padding: 10em 2em 0 6em; */
         background-color: rgb(0, 62, 120, 80%);
         display: flex;
