--- a/ACI/style.css
+++ b/ACI/style.css
@@ -69,7 +69,7 @@ body {
                 /* margin: 3em; */
                 border: 2px solid salmon;
                 border-radius: 0.4em;
-                padding: 1em 2em;
+                /* padding: 1em 2em; */
                 /* max-width: 33vw; */
                 text-align: center;
                 font-size: 1rem;
