--- a/ACI/Assessment Methodology/style.css
+++ b/ACI/Assessment Methodology/style.css
@@ -4,15 +4,17 @@ body {
     /* background-image: url(pexels-pixabay-531844.jpg); */
     /* background-image: linear-gradient(to bottom right, #003e78, #dddd4b); */
     background-size: cover;
-    background-color: black;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 3em;
     /* backdrop-filter: blur(5px); */
-    /* opacity: 0.3; */
 }
 
     #navbar {
         margin: 2em 0 0;
         /* border: 1px solid #567daa; */
-        /* border: 2px solid greenyellow; */
+        border: 2px solid greenyellow;
         /* padding: 10em 2em 0 6em; */
         background-color: rgb(0, 62, 120, 80%);
         display: flex;
@@ -38,31 +40,52 @@ body {
             /* max-width: 8em; */
         }
 
-    #text-container {
-        /* border: 2px solid greenyellow; */
+    .content-container {
+        border: 2px solid greenyellow;
         display: flex;
-        flex-direction: column;
+        /* flex-direction: column; */
         align-items: center;
+        justify-content: center;
+        gap: 2em;
+        width: 50vw;
     }
 
-        .text-body {
-            margin: 3em;
-            /* border: 2px solid salmon; */
-            border-radius: 0.4em;
-            padding: 4em 8em;
-            max-width: 33vw;
-            text-align: center;
-            font-size: 1.2rem;
-            background-color: rgba(51, 51, 51, 0.75);
-            /* color: rgb(54, 43, 43); */
-            color: white;
+        .text-container {
+            border: 2px solid red;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            max-width: 23vw;
         }
 
-        .text-header {
-            /* margin: 2em 0; */
-            /* border: 2px solid greenyellow; */
-            /* padding: 2em; */
-            font-size: 2.5rem;
+            .text-header {
+                margin: 0;
+                border: 2px solid yellow;
+                /* padding: 2em; */
+                font-size: 2rem;
+            }
+
+            .text-body {
+                /* margin: 3em; */
+                border: 2px solid salmon;
+                border-radius: 0.4em;
+                /* padding: 1em 2em; */
+                /* max-width: 33vw; */
+                text-align: center;
+                font-size: 1rem;
+                /* background-color: rgba(51, 51, 51, 0.75); */
+                /* color: rgb(54, 43, 43); */
+                /* color: white; */
+            }
+
+        .image-container {
+            border: 2px solid red;
+            max-width: 23vw;
+        }
+
+        img {
+            height: 50vh;
+            border-radius: 10px;
         }
 
         .list-point-parent {
