Introduced padding for body.

--- a/ACI/style.css
+++ b/ACI/style.css
@@ -1,5 +1,6 @@
 body {
     margin: 0;
+    padding: 0 1em;
     font-family: "Lato", sans-serif;
     /* background-image: url(pexels-pixabay-531844.jpg); */
     /* background-image: linear-gradient(to bottom right, #003e78, #dddd4b); */
