Set flex direction: column for content container.

--- a/ACI/style.css
+++ b/ACI/style.css
@@ -44,7 +44,7 @@ body {
     .content-container {
         border: 2px solid greenyellow;
         display: flex;
-        /* flex-direction: column; */
+        flex-direction: column;
         align-items: center;
         justify-content: center;
         gap: 2em;
